--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html {
 *:before,
 *:after {
     box-sizing: inherit;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -49,4 +51,21 @@ a:visited,
 a:hover,
 a:active {
     text-decoration: none;
+}
+
+/** app div **/
+
+#app {
+    margin-top: 50px;
+}
+
+/** buttons section **/
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 50px auto;
+    width: 10%;
+    text-align: center;
 }
