--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:active {
 .container {
     width: 600px;
     margin: auto;
-    border: 1px solid red;
+
 }
 
 /* .container * {
@@ -91,13 +91,11 @@ a:active {
     display: flex;
     width: 100%;
     justify-content: center;
+    cursor: pointer;
 }
 
 .box {
-    width: 20px;
-    height: 20px;
     border: 1px solid #000;
-
 }
 
 
